--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-dom": "18.2.0",
     "react-simple-typewriter": "^5.0.1",
     "tailwindcss": "3.3.3",
-    "typescript": "5.2.2"
+    "typescript": "5.2.2",
+    "undici": "^7.16.0"
   }
 }
