--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint --no-inline-config --max-warnings=0",
-    "test": "jest --passWithNoTests"
+    "test": "jest --passWithNoTests",
+    "seed:mvp": "tsx scripts/seed-mvp.ts"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.53.0",
@@ -24,5 +25,9 @@
     "react-simple-typewriter": "^5.0.1",
     "tailwindcss": "3.3.3",
     "typescript": "5.2.2"
+  },
+  "devDependencies": {
+    "dotenv": "^17.2.2",
+    "tsx": "^4.20.5"
   }
 }
