--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
+    "@types/jest": "^30.0.0",
     "dotenv": "^17.2.2",
+    "jest": "^30.1.3",
     "tsx": "^4.20.5"
   }
 }
