--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "next lint --no-inline-config --max-warnings=0",
     "test": "jest --passWithNoTests",
+    "test:e2e": "playwright test",
     "seed:mvp": "tsx scripts/seed-mvp.ts"
   },
   "dependencies": {
@@ -27,7 +28,10 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
+    "@playwright/test": "^1.44.0",
+    "@types/jest": "^29.5.12",
     "dotenv": "^17.2.2",
+    "jest": "^29.7.0",
     "tsx": "^4.20.5"
   }
 }
