--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "seed:mvp": "tsx scripts/seed-mvp.ts"
   },
   "dependencies": {
+    "@mdx-js/loader": "^3.1.1",
+    "@mdx-js/react": "^3.1.1",
+    "@next/mdx": "^13.5.1",
     "@supabase/supabase-js": "^2.53.0",
     "@types/node": "20.6.2",
     "@types/react": "18.2.22",
@@ -27,7 +30,13 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
+    "@mdx-js/mdx": "^3.1.1",
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
+    "@types/jest": "^30.0.0",
     "dotenv": "^17.2.2",
+    "jest": "^30.1.3",
+    "jest-environment-jsdom": "^30.1.2",
     "tsx": "^4.20.5"
   }
 }
