--- a/package.json
+++ b/package.json
@@ -27,7 +27,10 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
+    "@types/jest": "^29.5.14",
     "dotenv": "^17.2.2",
+    "jest": "^29.7.0",
+    "ts-jest": "^29.4.4",
     "tsx": "^4.20.5"
   }
 }
