--- a/package.json
+++ b/package.json
@@ -27,9 +27,12 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^6.8.0",
+    "@testing-library/react": "^16.3.0",
     "@types/jest": "^30.0.0",
     "dotenv": "^17.2.2",
     "jest": "^30.1.3",
+    "jest-environment-jsdom": "^30.1.2",
     "tsx": "^4.20.5"
   }
 }
