--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
+    "@testing-library/react": "^16.0.0",
     "@types/jest": "^30.0.0",
+    "jest-environment-jsdom": "^30.1.2",
     "dotenv": "^17.2.2",
     "jest": "^30.1.3",
     "tsx": "^4.20.5"
