--- a/.gitignore
+++ b/.gitignore
@@ -21,6 +21,7 @@ lib-cov
 # Coverage directory used by tools like istanbul
 coverage
 *.lcov
+test-results/
 
 # nyc test coverage
 .nyc_output
@@ -69,6 +70,7 @@ web_modules/
 .env
 .env.*
 !.env.example
+!.env.e2e.example
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
