--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start",
     "lint": "next lint --no-inline-config --max-warnings=0",
     "test": "jest --passWithNoTests",
+    "test:e2e": "playwright test",
     "seed:mvp": "tsx scripts/seed-mvp.ts"
   },
   "dependencies": {
@@ -27,6 +28,7 @@
     "typescript": "5.2.2"
   },
   "devDependencies": {
+    "@playwright/test": "^1.55.1",
     "@types/jest": "^30.0.0",
     "dotenv": "^17.2.2",
     "jest": "^30.1.3",
